--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Mocha Tests</title>
     <link rel="stylesheet" href="../vendor/bower/mocha/mocha.css" />
     <script src="../vendor/bower/mocha/mocha.js"></script>
