--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>Mocha Tests</title>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
-    <script src="../node_modules/mocha/mocha.js"></script>
-    <script data-main="../src/test/require-specs.js" src="../node_modules/requirejs/require.js"></script>
-    <script src="../src/test/check-coverage.js"></script>
+    <script data-main="../src/test/initialize.js"
+        src="../node_modules/requirejs/require.js"></script>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
         <a href="/?cov=true">Coverage</a>
       </p>
     </div>
-    <label>
+    <label class="coverage-checkbox">
       <input id="change-coverage" type="checkbox"> Show fully covered files
     </label>
   </body>
