Upgrade to jQuery 3.x
* Update some tests assuming that now all Deferred are async
* Add ‘check-dependencies’ control npm deps state before grunt builds

--- a/test/index.html
+++ b/test/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Mocha Tests</title>
+    <link rel="shortcut icon" href=" ">
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
     <script data-main="../src/test/initialize.js"
         src="../node_modules/requirejs/require.js"></script>
